@@ -2,10 +2,10 @@ package edu.hw3;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
+
 import static edu.hw3.Task2.Clusterizator3000.clusterize;
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class Task2Test {
@@ -15,7 +15,7 @@ public class Task2Test {
     @Test
     @DisplayName("\"()()()\" -> [\"()\", \"()\", \"()\"]")
     void task2Test1() {
-        boolean actual = clusterize("()()()").equals(new ArrayList<>(Arrays.asList("()", "()", "()")));
+        boolean actual = clusterize("()()()").equals(Arrays.asList("()", "()", "()"));
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -23,7 +23,7 @@ public class Task2Test {
     @Test
     @DisplayName("\"((()))\" -> [\"((()))\"]")
     void task2Test2() {
-        boolean actual = clusterize("((()))").equals(new ArrayList<>(Arrays.asList("((()))")));
+        boolean actual = clusterize("((()))").equals(List.of("((()))"));
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -31,12 +31,13 @@ public class Task2Test {
     @Test
     @DisplayName("\"((()))(())()()(()())\" -> [\"((()))\", \"(())\", \"()\", \"()\", \"(()())\"]")
     void task2Test3() {
-        boolean actual = clusterize("((()))(())()()(()())").equals(new ArrayList<>(Arrays.asList("((()))",
+        boolean actual = clusterize("((()))(())()()(()())").equals(Arrays.asList(
+            "((()))",
             "(())",
             "()",
             "()",
             "(()())"
-        )));
+        ));
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -45,7 +46,7 @@ public class Task2Test {
     @DisplayName("\"((())())(()(()()))\" -> [\"((())())\", \"(()(()()))\"]")
     void task2Test4() {
         boolean actual =
-            clusterize("((())())(()(()()))").equals(new ArrayList<>(Arrays.asList("((())())", "(()(()()))")));
+            clusterize("((())())(()(()()))").equals(Arrays.asList("((())())", "(()(()()))"));
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -53,7 +54,7 @@ public class Task2Test {
     @Test
     @DisplayName("\"()()())\" -> [\"()\", \"()\", \"()\"]")
     void task2Test5() {
-        boolean actual = clusterize("()()())").equals(new ArrayList<>(Arrays.asList("()", "()", "()")));
+        boolean actual = clusterize("()()())").equals(Arrays.asList("()", "()", "()"));
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -61,7 +62,7 @@ public class Task2Test {
     @Test
     @DisplayName("\"(()()()\" -> []")
     void task2Test6() {
-        boolean actual = clusterize("(()()()").equals(new ArrayList<>(Arrays.asList()));
+        boolean actual = clusterize("(()()()").equals(List.of());
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -69,7 +70,7 @@ public class Task2Test {
     @Test
     @DisplayName("\"\" -> []")
     void task2Test7() {
-        boolean actual = clusterize("").equals(new ArrayList<>(Arrays.asList()));
+        boolean actual = clusterize("").equals(List.of());
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -77,7 +78,7 @@ public class Task2Test {
     @Test
     @DisplayName("\" \" -> []")
     void task2Test8() {
-        boolean actual = clusterize(" ").equals(new ArrayList<>(Arrays.asList()));
+        boolean actual = clusterize(" ").equals(List.of());
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -85,7 +86,7 @@ public class Task2Test {
     @Test
     @DisplayName("\"))((\" -> []")
     void task2Test9() {
-        boolean actual = clusterize("))((").equals(new ArrayList<>(Arrays.asList()));
+        boolean actual = clusterize("))((").equals(List.of());
         boolean expected = true;
         assertEquals(actual, expected);
     }
@@ -93,7 +94,7 @@ public class Task2Test {
     @Test
     @DisplayName("\"(( ))\" -> []")
     void task2Test10() {
-        boolean actual = clusterize("(( ))").equals(new ArrayList<>(Arrays.asList()));
+        boolean actual = clusterize("(( ))").equals(List.of());
         boolean expected = true;
         assertEquals(actual, expected);
     }
